# RAVEIRCv4

./: .gitignore  ABOUT.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  TESTING.md  package-lock.json  package.json  run.sh  svelte.config.js  vite.config.js  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: SERVICES.md  SIGNING.md
docs/mirc/: commands.md  identifiers.md  scripting.md  ui-behavior.md
gateway/: README.md  raveirc-gw.py
resources/AdiIRC/: CHANGED.txt  Notes.txt  Notes2.txt  commands.ini  config.bak  menus.ini  networks.ini  nicklistbuttons.ini  scratchpad.txt  slaps.txt  users.ini  vars.bak  vars.ini
resources/AdiIRC/Scripts/: BitCoin-Drone  Password Protect.txt  Protections  RAVE-00  antispam.ini  autounban.ini  custom  exclude  kickmsg.txt  killmsg.txt  lagbar.ini  mediaplayer.mrc  memos.ini  msgrelay.mrc  ozacronym.mrc  reply  scanip.mrc  script.nfo  script1.nfo  test-big.ini  test.mrc
resources/AdiIRC/Themes/: Brownish.ini  ClassyTheme.ini  Dark_Para.ini  Dunno v0.1.ini  Egdelwonk.ini  Flat blue v0.1.ini  Flat concrete v0.1.ini  Flat fashion pink v0.1.ini  Flat green v0.1.ini  Flat marine v0.1.ini  Flat orange v0.1.ini  Flat pink v0.1.ini  Flat purple v0.1.ini  (+25 more)
scripts/: livetest.ts
site/: changelog.html  index.html
src/: app.css  app.html  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  socket.rs
src-tauri/src/irc/: connection.rs  event.rs  manager.rs  message.rs  mod.rs
src-tauri/src/rave/: ai.rs  config.rs  ctcp.rs  mod.rs  persist.rs
src/lib/: appearance.svelte.ts  channels.ts  focus.ts  fontlists.test.ts  fonts.ts  notes.ts  platform.ts  profiles.ts  secrets.ts  servers.ts  update.svelte.ts  util.test.ts  util.ts
src/routes/: +page.svelte
static/: manifest.webmanifest
(+62 files in other folders)
